--- a/demo.html
+++ b/demo.html
@@ -134,7 +134,7 @@
 
 <body>
 
-	<header id="header"><p>Header...</p></header>
+	<header id="header"><p>HTML Demo...Header...</p></header>
 
 	<div id="container">
 
