--- a/demo.html
+++ b/demo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- Template by quackit.com -->
 <html>
 <head>
@@ -134,7 +134,7 @@
 
 <body>
 
-	<header id="header"><p>HTML Demo...Header...</p></header>
+	<header id="header"><p>HTML Demo 1...Header...</p></header>
 
 	<div id="container">
 
